# open_closed_hand

./: .gitignore  CMakeLists.txt  camshift.py  capture.py  conanfile.py  hand_detector.py  histogram.cpp  requirements.txt
